--- a/front/style.css
+++ b/front/style.css
@@ -1,3 +1,14 @@
 *{
     clear: both;
 }
+*{
+    clear: both;
+}*{
+    clear: both;
+}*{
+    clear: both;
+}*{
+    clear: both;
+}*{
+    clear: both;
+}
